--- a/META.yml
+++ b/META.yml
@@ -12,7 +12,7 @@ configure_requires:
 distribution_type: module
 dynamic_config: 1
 generated_by: 'Module::Install version 1.06'
-license: gpl
+license: gpl3
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -28,5 +28,6 @@ requires:
   Import::Into: 0
   perl: 5.10.1
 resources:
-  license: http://opensource.org/licenses/gpl-license.php
-version: 0.01
+  license: http://opensource.org/licenses/gpl-3.0.html
+  repository: https://bitbucket.org/djerius/pkg
+version: 0.02
