Import of DJERIUS/pkg-0.04 from CPAN.
gitpan-cpan-distribution: pkg
gitpan-cpan-version:      0.04
gitpan-cpan-path:         DJERIUS/pkg-0.04.tar.gz
gitpan-cpan-author:       DJERIUS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,7 @@ author:
   - 'Diab Jerius'
 build_requires:
   ExtUtils::MakeMaker: 6.59
+  Test::Exception: 0
   Test::Lib: 0
   Test::More: 0
   Test::Trap: 0
@@ -30,4 +31,4 @@ requires:
 resources:
   license: http://opensource.org/licenses/gpl-3.0.html
   repository: https://bitbucket.org/djerius/pkg
-version: 0.02
+version: 0.04
